manifests/anki/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anki
  labels:
    app.kubernetes.io/managed-by: ngarvey-homelab
